--- a/webpage/index.html
+++ b/webpage/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <link rel="stylesheet" href="style.css" />
+
 <body>	
 
-<div id="display">
+	<div id="display"></div>
+
+	<div id="toolTip">
+		Name: <span id="playerName"></span>
+	</div>
+
 
 </body>
 
@@ -11,6 +17,7 @@
 <script src="lib/topojson.js"></script>
 <script src="lib/queue.js"></script>
 <script src="lib/crossfilter.js"></script>
+<script src="lineSetup.js"></script>
 <script src="addBars.js"></script>
 
 </html>
