mouse overs work

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -25,8 +25,12 @@
 				<img id="tooltipImg" src="thumbnails/awtrede01.jpg">
 			</div>
 		</div>
-
+		
 		<div id="tooltipBot">
+			<div id="labels">
+				<div id="minLabel">Minutes</div>
+				<div id="perLabel">Player Efficiency Rating</div>
+			</div>
 
 		</div>
 	</div>
