--- a/webpage/index.html
+++ b/webpage/index.html
@@ -5,19 +5,21 @@
 
 <body>	
 	<div id="top">
-		<div id="topLeft">
-			<h1>NBA DRAFT</h1>The top
+
+ 		<div class="confDiv" id="confDivLeft"></div>
+
+		<div id="topMiddle">
+			<h1>NBA DRAFT</h1>
 			<div id="slider">
 				<input id="slide" type="range"
 				 min="2" max="40" step="1" value="10"
 				 onchange="updateColorScale(+this.value)" />
 			</div>
 			<br/>
- 			<div id="rankNum"></div> players per year
+ 			The Top <div id="rankNum"></div> players per year
  		</div>
 
- 		<div id="topRight"></div>
-
+ 		<div class="confDiv" id="confDivRight"></div>
 	</div>
 	<div id="display"></div>
 
